# cex-arbitrage

./: .env.example  Cargo.toml  Dockerfile  README.md  extract_price.sh
cex-arbitrage/: Cargo.toml
cex-arbitrage/src/: arbitrage.rs  binance.rs  get_prices.rs  main.rs  types.rs
