[package]
name = "cex-arbitrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.5"
dotenv = "0.15.0"

[source.crates-io]
registry = "git://github.com/rust-lang/crates.io-index.git"

